--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
         run: npm install
 
       - name: Build
+        env:
+          GEMINI_API_KEY: ${{AIzaSyB21uKw_4P_cE_V9gvmW47ifxDalrEqlTo}}
         run: npm run build
 
       - name: Setup Pages
