--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build
         env:
-          GEMINI_API_KEY: ${{AIzaSyB21uKw_4P_cE_V9gvmW47ifxDalrEqlTo}}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: npm run build
 
       - name: Setup Pages
